# redshift-comment-mcp

./: .gitignore  CLAUDE.md  README.ja.md  README.md  README.zh-TW.md  implementation_guide.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml  test-publish.yml  test.yml
commands/: redshift-cache-schema.md  redshift-erd.md  redshift-explore.md  redshift-grep-columns.md  redshift-grep-tables.md  redshift-lineage-from-stl.md  redshift-profile.md  redshift-setup.md  redshift-suggest-schema-yml.md  redshift-switch-profile.md
docs/code-toolkit/plans/: 2026-06-11-plugin-userconfig.md  2026-06-12-mcpb-companion.md
docs/code-toolkit/specs/: 2026-06-10-mcpb-desktop-extension.md  2026-06-10-registry-server-json.md  2026-06-11-plugin-userconfig.md  2026-06-12-mcpb-companion.md
mcpb/server/: main.py
scripts/: generate_mcpb_manifest.py
skills/: README.ja.md  README.md  README.zh-TW.md
skills/redshift-cache-schema/: README.ja.md  README.md  README.zh-TW.md  SKILL.md
skills/redshift-erd/: README.ja.md  README.md  README.zh-TW.md  SKILL.md
skills/redshift-explore/: README.ja.md  README.md  README.zh-TW.md  SKILL.md
skills/redshift-grep-columns/: README.ja.md  README.md  README.zh-TW.md  SKILL.md
skills/redshift-grep-tables/: README.ja.md  README.md  README.zh-TW.md  SKILL.md
skills/redshift-lineage-from-stl/: README.ja.md  README.md  README.zh-TW.md  SKILL.md
skills/redshift-lineage-from-stl/assets/: parse_stl_lineage.py  parse_stl_lineage_test.py
skills/redshift-profile/: README.ja.md  README.md  README.zh-TW.md  SKILL.md
skills/redshift-setup/: SKILL.md
skills/redshift-setup/references/: password-macos.md  password-terminal-handoff.md  password-zenity.md
skills/redshift-suggest-schema-yml/: README.ja.md  README.md  README.zh-TW.md  SKILL.md
skills/redshift-switch-profile/: SKILL.md
src/my_redshift_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/redshift_comment_mcp/: README.ja.md  README.md  README.zh-TW.md  config.py  redshift_tools.py  server.py  setup_cli.py
tests/: test_cache_contract.py  test_config.py  test_connection.py  test_lineage_contract.py  test_mcpb_adapter.py  test_mcpb_manifest.py  test_repo_invariants.py  test_server_resolution.py  test_setup_cli.py  test_skill_bodies.py  test_skill_descriptions.py  test_tools.py
tests/e2e/: conftest.py  test_executed_sql_wire.py  test_setup_via_dialog_wire.py
tests/integration/: conftest.py  test_live_cluster_smoke.py
