[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "redshift-comment-mcp"
dynamic = ["version"]
authors = [
  { name="kouko", email="kouko@users.noreply.github.com" },
]
description = "A Model-Context Protocol server for Amazon Redshift."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "awswrangler[redshift]",
    "redshift-connector",
    "pandas",
    # fastmcp 在 2.x → 3.x 之間搬動了 list_tools API；測試 helper 已雙路 fallback，
    # 這裡的最低版本只是避開更舊、API 完全不同的版本。
    "fastmcp>=2.11.0",
    "keyring>=24",
    "tomli>=2; python_version < '3.11'",
    "tomli-w>=1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/kouko/redshift-comment-mcp"
"Bug Tracker" = "https://github.com/kouko/redshift-comment-mcp/issues"

# 這是讓 `uvx` 能夠執行的關鍵
[project.scripts]
redshift-comment-mcp = "redshift_comment_mcp.server:main"

# setuptools-scm 自動版本管理
# fallback_version: 給沒有 .git 的安裝路徑（例如 Claude Code plugin cache、
# sdist tarball、Docker build context）一個確定的版本號。發新版時請與
# .claude-plugin/plugin.json 的 "version" 欄位一同更新。
[tool.setuptools_scm]
write_to = "src/redshift_comment_mcp/_version.py"
fallback_version = "0.9.0"